[gd_scene load_steps=3 format=3 uid="uid://start_screen_scene"]

[ext_resource type="Script" path="res://scripts/StartScreen.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/start/image.png" id="2_image"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="StartImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_image")
expand_mode = 1
stretch_mode = 6

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -100.0
offset_right = 80.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 2
text = "START NOW"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
